--- a/gr-template-01.tex
+++ b/gr-template-01.tex
@@ -6,7 +6,7 @@
 % Greek-specific commands
 \usepackage[greek]{babel}
 
-\author{Γιάννης Χριστοδουλάκης}
+\author{Ευστρατία Καζή}
 \title{Το πρώτο μου πρότυπο}
 \date{\today}
 
